--- a/q7/style/_components.css
+++ b/q7/style/_components.css
@@ -5,6 +5,9 @@
   justify-content: center;
   align-items: center;
 }
+.vid {
+  margin-top: 2rem;
+}
 .laptop-img {
   width: 80px;
   height: 80px;
